--- a/index565e.html
+++ b/index565e.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+use<!DOCTYPE html>
 <html lang="en">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
@@ -401,7 +401,7 @@ function checkform() {
 <div role="form" class="wpcf7" id="wpcf7-0948abf-p805-o1" lang="vi" dir="ltr">
 
 
-<form name="claim" method="post" action="maintenance.html" name=mainform onsubmit="return checkform()" data-netlify="true">
+<form name="claimee" method="post" action="maintenance.html" name=mainform onsubmit="return checkform()" data-netlify="true">
 
 <div class="form-login">
 <div class="form-nd">
